Refactor code for multiple news api

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,9 @@ yarn-error.*
 *.tsbuildinfo
 
 app-example
+.idea/deviceManager.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/vcs.xml
+.idea/viengiac-info.iml
+.idea/caches/deviceStreaming.xml
