--- a/package.json
+++ b/package.json
@@ -28,8 +28,11 @@
     "expo-symbols": "~0.4.5",
     "expo-system-ui": "~5.0.11",
     "expo-web-browser": "~14.2.0",
+    "he": "^1.2.0",
+    "i18next": "^25.5.2",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-i18next": "^15.7.3",
     "react-native": "0.79.6",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-paper": "^5.14.5",
