--- a/.github/workflows/_ci-lint-test.yml
+++ b/.github/workflows/_ci-lint-test.yml
@@ -1,20 +1,17 @@
-name: CI - Lint and Test
+name: Reusable - Lint & Test
 
 on:
-  push:
-    branches:
-      - '**'  # every branch
-  pull_request:
-    branches:
-      - '**'  # every branch
-
-# Cancel outdated runs on same branch/PR to save minutes
-concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: true
+  workflow_call:
+    inputs:
+      node-version:
+        description: Node version to use
+        required: false
+        default: '20'
+        type: string
 
 jobs:
   lint-test:
+    name: Lint & Test
     runs-on: ubuntu-latest
     timeout-minutes: 20
     steps:
@@ -23,7 +20,7 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v5
         with:
-          node-version: '20'
+          node-version: ${{ inputs['node-version'] }}
           cache: 'npm'
 
       - name: Install deps
