--- a/.github/workflows/_ci-compile-ios.yml
+++ b/.github/workflows/_ci-compile-ios.yml
@@ -50,22 +50,34 @@ jobs:
       # Detect workspace & scheme from the generated project
       - name: Detect iOS workspace & scheme
         id: iosmeta
+        shell: bash
         run: |
-          WORKSPACE=$(ls ios/*.xcworkspace | head -n 1)
-          echo "Detected iOS workspace: $WORKSPACE"
-          if [ -z "$WORKSPACE" ]; then echo "No .xcworkspace under ios/"; exit 1; fi
+            set -euo pipefail
 
-          SCHEME=$(xcodebuild -list -json -workspace "$WORKSPACE" | /usr/bin/python3 - <<'PY'
-          import sys, json
-          d=json.load(sys.stdin); w=d.get("workspace") or {}
-          schemes=w.get("schemes") or []
-          print(schemes[0] if schemes else "")
-          PY
-          )
-          if [ -z "$SCHEME" ]; then echo "No scheme found"; exit 1; fi
-          echo "workspace=$WORKSPACE" >> $GITHUB_OUTPUT
-          echo "scheme=$SCHEME" >> $GITHUB_OUTPUT
-          echo "Detected: $WORKSPACE / $SCHEME"
+            # Find workspace
+            WORKSPACE=$(find ios -maxdepth 1 -name '*.xcworkspace' -print -quit)
+            if [[ -z "${WORKSPACE:-}" ]]; then
+            echo "No .xcworkspace under ios/"; exit 1
+            fi
+            echo "Detected iOS workspace: $WORKSPACE"
+
+            # Pipe JSON into Python; print the first scheme (or empty)
+            SCHEME=$(
+            xcodebuild -list -json -workspace "$WORKSPACE" |
+            /usr/bin/python3 -c "import sys,json; d=json.load(sys.stdin); w=d.get('workspace') or {}; s=w.get('schemes') or []; print(s[0] if s else '')"
+            )
+
+            if [[ -z "${SCHEME:-}" ]]; then
+            echo "No scheme found in $WORKSPACE (is the scheme Shared?)"; exit 1
+            fi
+
+            {
+            echo "workspace=$WORKSPACE"
+            echo "scheme=$SCHEME"
+            } >> "$GITHUB_OUTPUT"
+
+            echo "Detected: $WORKSPACE / $SCHEME"
+
 
       # Compile for iOS Simulator (no signing)
       - name: Compile iOS (Debug, no signing)
