--- a/.github/workflows/_ci-compile-android.yml
+++ b/.github/workflows/_ci-compile-android.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Create .env from repository secrets
         run: |
           cat > .env <<'EOF'
-          FIREBASE_API_KEY=${{ secrets.FIREBASE_API_KEY }}
+          EXPO_PUBLIC_FIREBASE_API_KEY=${{ secrets.FIREBASE_API_KEY }}
           EXPO_PUBLIC_FIREBASE_AUTH_DOMAIN=${{ secrets.FIREBASE_AUTH_DOMAIN }}
           EXPO_PUBLIC_FIREBASE_PROJECT_ID=${{ secrets.FIREBASE_PROJECT_ID }}
           EXPO_PUBLIC_FIREBASE_STORAGE_BUCKET=${{ secrets.FIREBASE_STORAGE_BUCKET }}
