--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "lint-fix": "expo lint --fix",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:cov": "jest --coverage"
+    "test:cov": "jest --coverage",
+    "deploy-preview": "eas build -p android --profile preview"
   },
   "dependencies": {
     "-": "^0.0.1",
     "@expo/vector-icons": "^14.1.0",
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-vector-icons/material-design-icons": "^12.3.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
@@ -30,6 +32,7 @@
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.4.0",
     "expo-linking": "~7.1.7",
+    "expo-localization": "~16.1.6",
     "expo-router": "~5.1.5",
     "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
@@ -38,12 +41,12 @@
     "expo-web-browser": "~14.2.0",
     "firebase": "^12.5.0",
     "he": "^1.2.0",
-    "i18next": "^25.5.2",
+    "i18next": "^25.6.2",
     "jest": "~29.7.0",
     "jest-expo": "~53.0.10",
     "react": "19.1.1",
     "react-dom": "19.1.1",
-    "react-i18next": "^15.7.3",
+    "react-i18next": "^16.3.2",
     "react-native": "0.79.5",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-paper": "^5.14.5",
