--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-svg": "^15.15.0",
     "react-native-vector-icons": "^10.3.0",
     "react-native-web": "^0.21.0",
     "react-native-webview": "13.15.0",
@@ -70,6 +71,7 @@
     "eslint-config-expo": "~10.0.0",
     "jest": "^29.7.0",
     "jest-expo": "~54.0.13",
+    "react-native-svg-transformer": "^1.5.2",
     "react-test-renderer": "^19.1.0",
     "typescript": "~5.9.2"
   },
