--- a/package.json
+++ b/package.json
@@ -54,10 +54,9 @@
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-svg": "^15.15.0",
     "react-native-vector-icons": "^10.3.0",
     "react-native-web": "^0.21.0",
-    "react-native-webview": "13.15.0",
+    "react-native-webview": "^13.15.0",
     "react-native-worklets": "0.5.1",
     "save-dev": "^0.0.1-security"
   },
