--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.8",
+    "expo-video": "~3.0.14",
     "expo-web-browser": "~15.0.9",
     "firebase": "^12.5.0",
     "he": "^1.2.0",
@@ -66,11 +67,11 @@
     "@babel/core": "^7.25.2",
     "@testing-library/react": "^16.3.0",
     "@testing-library/react-native": "^13.3.3",
+    "@types/he": "^1.2.3",
     "@types/jest": "29.5.14",
     "@types/react": "~19.1.10",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
-    "expo-module-scripts": "^5.0.7",
     "jest": "^29.7.0",
     "jest-expo": "~54.0.13",
     "react-native-svg-transformer": "^1.5.2",
